Fix overflow hidden

--- a/src/ui/app.module.css
+++ b/src/ui/app.module.css
@@ -7,7 +7,6 @@
   flex-direction: column;
   position: relative;
   background: var(--background);
-  overflow: hidden;
   container-type: inline-size;
 }
 
